css/main.scss
@import 'variables';

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    color: $fontColor;
}
html, body, main {
    min-height: 100%;
    background-color: #12181D;
}
.menu-link {
    position: absolute;
    top: 5px;
    right: 5px;
    height: 30px;
    z-index: 99;
}
a:not(.MuiButtonBase-root), .link {
    cursor: pointer;
    color: $link;
    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}

.download-size {
    font-size: 0.7em;
}

.dataset-downloads {
    ul {
        display: flex;
        flex-direction: column;
        list-style-type: none;
        padding-left: 0;
    }
    li {
        display: flex;
        flex-flow: row nowrap;
        align-items: center;

        margin-left: 0;
        padding: 1em;

        img {
            height: 1.5em;
            margin-right: 0.8em;
        }
    }
}

.mission-phase-table {
    border-collapse: collapse;
    td, th {
        padding: 5px;
        border: 1px solid #444
    }
}

